<resources>
    <string name="app_name">CurrencyConverterApp</string>
    <string name="title_txt">Currency Converter</string>
    <string name="amount_txt">Enter Amount Here</string>
    <string name="converted_txt">Converted Amount</string>
    <string name="convert_btn">Convert</string>
    <string name="bseValueTextView">The base value is: EUR</string>

    <string-array name="currency">
        <item>EUR</item>
    </string-array>

    <string-array name="currencies">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>ISK</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>
</resources>
